# razorshot

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build-deb.sh
.github/workflows/: release.yml
resources/: com.razorshot.Razorshot.desktop
src/: app.rs  cli.rs  config.rs  main.rs
src/annotate/: blur.rs  canvas.rs  mod.rs  shapes.rs  toolbar.rs  tools.rs
src/capture/: mod.rs  portal.rs  region.rs
src/output/: clipboard.rs  file.rs  mod.rs
src/tray/: mod.rs
src/ui/: feedback.rs  mod.rs  selection_overlay.rs  window.rs
